SLING-12648: MapEntries: factor out vanity path handling - make resolveMapsMap final