@@ -120,7 +120,7 @@ public class MapEntries implements
 
     private volatile ServiceRegistration<ResourceChangeListener> registration;
 
-    private Map<String, List<MapEntry>> resolveMapsMap;
+    private final Map<String, List<MapEntry>> resolveMapsMap;
 
     private List<Map.Entry<String, ResourceChange.ChangeType>> resourceChangeQueue;
 
@@ -157,7 +157,7 @@ public class MapEntries implements
         this.factory = factory;
         this.eventAdmin = eventAdmin;
 
-        this.resolveMapsMap = Collections.singletonMap(GLOBAL_LIST_KEY, Collections.emptyList());
+        this.resolveMapsMap = new ConcurrentHashMap<>(Map.of(GLOBAL_LIST_KEY, Collections.emptyList()));
         this.mapMaps = Collections.<MapEntry> emptyList();
         this.aliasMapsMap = new ConcurrentHashMap<>();
         this.stringInterpolationProvider = stringInterpolationProvider;
@@ -249,8 +249,6 @@ public class MapEntries implements
                     isOptimizeAliasResolutionEnabled = false;
                 }
             }
-
-            this.resolveMapsMap = new ConcurrentHashMap<>();
 
             doUpdateConfiguration();
 
